Modify some queries

--- a/database/queries/q02_02.md
+++ b/database/queries/q02_02.md
@@ -1,23 +1,37 @@
 |    date    | time_slot | group_name |   venue   | section |
 |------------|-----------|------------|-----------|---------|
-| 2022-08-21 | 11:00     | 山谷連        | X 市文化センター | A ホール   |
-| 2022-08-21 | 15:00     | 山谷連        | X 市文化センター | C ホール   |
-| 2022-08-21 | 16:00     | 山谷連        | XB 劇場     | 大ホール    |
-| 2023-08-21 | 10:00     | 山谷連        | X 市文化センター | B ホール   |
-| 2023-08-21 | 11:00     | 山谷連        | XB 劇場     | 小ホール    |
-| 2023-08-21 | 12:00     | 山谷連        | X 市文化センター | B ホール   |
-| 2023-08-21 | 12:00     | 山谷連        | XB 劇場     | 大ホール    |
-| 2023-08-21 | 16:00     | 山谷連        | X 市文化センター | A ホール   |
-| 2023-08-21 | 16:00     | 山谷連        | X 市文化センター | B ホール   |
-| 2023-08-21 | 16:00     | 山谷連        | XB 劇場     | 大ホール    |
-| 2023-08-21 | 18:00     | 山谷連        | X 市文化センター | A ホール   |
-| 2023-08-21 | 18:00     | 山谷連        | X 市文化センター | B ホール   |
 | 2024-08-21 | 10:00     | 山谷連        | X 市文化センター | A ホール   |
+| 2024-08-21 | 10:00     | 文大連        | X 市文化センター | B ホール   |
+| 2024-08-21 | 10:00     | 清風連        | X 市文化センター | C ホール   |
 | 2024-08-21 | 10:00     | 山谷連        | XB 劇場     | 大ホール    |
+| 2024-08-21 | 10:00     | 阿学連        | XB 劇場     | 小ホール    |
+| 2024-08-21 | 11:00     | 電子連        | X 市文化センター | A ホール   |
 | 2024-08-21 | 11:00     | 山谷連        | X 市文化センター | B ホール   |
+| 2024-08-21 | 11:00     | 海原連        | X 市文化センター | C ホール   |
+| 2024-08-21 | 11:00     | 海原連        | XB 劇場     | 大ホール    |
+| 2024-08-21 | 11:00     | 電子連        | XB 劇場     | 小ホール    |
+| 2024-08-21 | 12:00     | 清風連        | X 市文化センター | A ホール   |
+| 2024-08-21 | 12:00     | 電子連        | X 市文化センター | B ホール   |
+| 2024-08-21 | 12:00     | 海原連        | X 市文化センター | C ホール   |
 | 2024-08-21 | 12:00     | 山谷連        | XB 劇場     | 大ホール    |
+| 2024-08-21 | 12:00     | 阿学連        | XB 劇場     | 小ホール    |
+| 2024-08-21 | 15:00     | 不動連        | X 市文化センター | A ホール   |
 | 2024-08-21 | 15:00     | 山谷連        | X 市文化センター | B ホール   |
+| 2024-08-21 | 15:00     | 工業連        | X 市文化センター | C ホール   |
+| 2024-08-21 | 15:00     | 工業連        | XB 劇場     | 大ホール    |
+| 2024-08-21 | 15:00     | 電子連        | XB 劇場     | 小ホール    |
 | 2024-08-21 | 16:00     | 山谷連        | X 市文化センター | A ホール   |
+| 2024-08-21 | 16:00     | 文大連        | X 市文化センター | B ホール   |
+| 2024-08-21 | 16:00     | 不動連        | X 市文化センター | C ホール   |
+| 2024-08-21 | 16:00     | 阿学連        | XB 劇場     | 大ホール    |
 | 2024-08-21 | 16:00     | 山谷連        | XB 劇場     | 小ホール    |
+| 2024-08-21 | 17:00     | 清風連        | X 市文化センター | A ホール   |
+| 2024-08-21 | 17:00     | 海原連        | X 市文化センター | B ホール   |
+| 2024-08-21 | 17:00     | 不動連        | X 市文化センター | C ホール   |
+| 2024-08-21 | 17:00     | 海原連        | XB 劇場     | 大ホール    |
+| 2024-08-21 | 17:00     | 清風連        | XB 劇場     | 小ホール    |
+| 2024-08-21 | 18:00     | 海原連        | X 市文化センター | A ホール   |
+| 2024-08-21 | 18:00     | 工業連        | X 市文化センター | B ホール   |
+| 2024-08-21 | 18:00     | 清風連        | X 市文化センター | C ホール   |
 | 2024-08-21 | 18:00     | 山谷連        | XB 劇場     | 大ホール    |
 | 2024-08-21 | 18:00     | 山谷連        | XB 劇場     | 小ホール    |
